follow google styleguide with regard to json member names
